--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -66,8 +66,12 @@
       <div class="sub-container">
         <% @followed_artists.each do |artist|   %>
           <div class="artist-card-profile">
-            <img src="https://images.unsplash.com/photo-1605722243979-fe0be8158232?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8Mnx8fGVufDB8fHx8&w=1000&q=80" alt="artist photo">
-            <p><%= link_to "#{artist.artist.name}", artist_path(artist.artist)%></p>
+            <% if artist.artist.image_url %>
+              <img src="<%= artist.artist.image_url %>" alt="Artist image">
+            <% else %>
+              <img src="https://images.unsplash.com/photo-1605722243979-fe0be8158232?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8Mnx8fGVufDB8fHx8&w=1000&q=80" alt="Artist placeholder image">
+            <% end %>
+           <p><%= link_to "#{artist.artist.name}", artist_path(artist.artist)%></p>
           </div>
         <% end %>
       </div>
