--- a/app/views/concerts/show.html.erb
+++ b/app/views/concerts/show.html.erb
@@ -15,8 +15,8 @@
         </div>
         <div class="box-right">
           <div class="box-price">
-            <p><strong style="color: #39AEA9">PRICE </strong></p>
-            <p class="price"><%= @concert.price %>€</p>
+            <p><strong style="color: #39AEA9">PRICE FROM</strong></p>
+            <p class="price"><%= @concert.price.floor %>€</p>
          </div>
 
           <div class="box-buy">
