--- a/app/assets/stylesheets/pages/_artists_index.scss
+++ b/app/assets/stylesheets/pages/_artists_index.scss
@@ -54,7 +54,7 @@
   background-color: $color-dark;
   color: white;
   border-radius: 10px;
-  padding: 15px;
+  // padding: 15px;
   display: flex;
   flex-direction: column;
   justify-content: center;
