--- a/app/views/followed_artists/index.html.erb
+++ b/app/views/followed_artists/index.html.erb
@@ -15,7 +15,8 @@
         </div>
         <div class="artist-card-body">
           <h2><%= link_to "#{artist.artist.name}", artist_path(artist.artist)%></h2>
-          <p><%= artist.artist.description.slice(0, 120) ... %></p>
+          <% last_space_index = artist.artist.description.slice(0, 120).rindex(" ") %>
+          <p><%= artist.artist.description.slice(0, last_space_index) ... %></p>
         </div>
 
       </div>
