--- a/app/views/concerts/index.html.erb
+++ b/app/views/concerts/index.html.erb
@@ -1,5 +1,5 @@
 
-<div class="layout-container">
+<div class="concerts-layout">
 
   <div class="banner-one">
     <h1 class="text-center">Find your next concert!</h1>
@@ -14,28 +14,42 @@
   </div>
 
 
-  <div class="card-concert-container">
+
+  <div class="big-box">
+
+  <div class="masonry-grid">
+
     <% @concerts.each do |concert|   %>
+    <div class="item one masonry-cell">
+      <img class="item-1-img" src="https://media.istockphoto.com/id/1193274679/photo/excited-crowd-on-a-rock-concert.jpg?s=612x612&w=0&k=20&c=330XDxllhunHf5dt_IwMO2yxPBjXb5j_WMkf_0oWBmU=" alt="concert image">
+      <p class="masonry-date hover-disapear"><%= concert.artist.name %></p>
 
-      <div class="card-concert">
-        <div class="card-img">
-          <img src="https://media.istockphoto.com/id/1193274679/photo/excited-crowd-on-a-rock-concert.jpg?s=612x612&w=0&k=20&c=330XDxllhunHf5dt_IwMO2yxPBjXb5j_WMkf_0oWBmU=" alt="concert image">
-          <p class="img-date"><%= concert.date %></p>
-
-        </div>
-        <div class="card-body">
-          <div class="d-flex justify-content-between align-items-center">
-            <div><p class="card-header mb-2"><%= link_to concert.artist.name, artist_path(concert.artist) %></p></div>
-            <div><p><%= button_to "Save", {action: "create", :concert_id => concert.id, :controller => "saved_concerts", method: :post}, {class: "save"} %></p></div>
-          </div>
-          <p class="card-description"><strong></strong><%= concert.location %></p>
-          <div class="d-flex justify-content-center align-items-center">
-            <button class="btn-accent"><%= link_to "See more", concert_path(concert)%></button>
-          </div>
-        </div>
+      <div class="hover-appear">
+        <p class="masonry-date ">    <%= link_to "#{concert.date.strftime("%B %d")}", concert_path(concert)%></p>
       </div>
+    </div>
     <% end %>
+
+
+
+
+
+
+</div>
+
+
   </div>
+
+
+
+
+
+
+
+
+
+
+
 
   <div>
     <%= link_to "Go back", root_path, class: "btn btn-light my-5 rounded" %>
