--- a/app/assets/stylesheets/pages/_concerts_index.scss
+++ b/app/assets/stylesheets/pages/_concerts_index.scss
@@ -78,6 +78,7 @@
   border-radius: 5px;
   opacity: 0.8;
 }
+
 .masonry-date {
   position: absolute;
   top: 50%;
@@ -108,6 +109,12 @@
   font-size: 50px;
   font-family: 'Bebas Neue', cursive;
   transition: opacity ease-in-out 0.3s;
+  // text-shadow: 0px 0px 50px rgb(255, 255, 255);
+  background-color: white;
+  // line-height: 3.5rem;
+  height: fit-content;
+  width: fit-content;
+  padding: 0px 7px;
 }
 
 .one {
@@ -131,5 +138,11 @@
   }
   img {
     opacity: 0.5;
+  }
+}
+
+.concerts-layout {
+  .btn-accent {
+    width: 150px;
   }
 }
