--- a/app/views/concerts/index.html.erb
+++ b/app/views/concerts/index.html.erb
@@ -43,8 +43,8 @@
 
 
 
-<div class="banner-one text-center">
-    <%= link_to "Go back", root_path, class: "btn btn-light my-5 rounded" %>
+<div class="banner-one text-center back">
+    <%= link_to "Go back", root_path, class: "btn btn-accent" %>
 
   </div>
 
