--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -22,6 +22,10 @@
         <%= f.label :country_code, "Country *", class: "form-label required" %>
         <%= f.country_select :country_code, {}, {class: "form-select"} %>
       </div>
+      <%= f.input :city,
+                  required: true,
+                  autofocus: true,
+                  input_html: { autocomplete: "city" }%>
       <%= f.input :address,
                   required: true,
                   autofocus: true,
