--- a/app/views/followed_artists/index.html.erb
+++ b/app/views/followed_artists/index.html.erb
@@ -11,12 +11,11 @@
     <% @followed_artists.each do |artist|   %>
       <div class="artist-card">
         <div class="artist-card-img">
-          <img src="<%= artist.artist.image_url %>" alt="artist photo">
+          <img id="x" src="https://images.unsplash.com/photo-1605722243979-fe0be8158232?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8Mnx8fGVufDB8fHx8&w=1000&q=80" alt="artist photo">
         </div>
         <div class="artist-card-body">
           <h2><%= link_to "#{artist.artist.name}", artist_path(artist.artist)%></h2>
-          <% last_space_index = artist.artist.description.slice(0, 120).rindex(" ") %>
-          <p><%= artist.artist.description.slice(0, last_space_index) ... %></p>
+          <p><%= artist.artist.description %></p>
         </div>
 
       </div>
