--- a/app/assets/stylesheets/pages/_concerts_index.scss
+++ b/app/assets/stylesheets/pages/_concerts_index.scss
@@ -67,6 +67,7 @@
   border-radius: 5px;
   position: relative;
   box-shadow: 0px 0px 30px rgb(15, 15, 15);
+
 }
 
 
@@ -110,11 +111,28 @@
   font-family: 'Bebas Neue', cursive;
   transition: opacity ease-in-out 0.3s;
   // text-shadow: 0px 0px 50px rgb(255, 255, 255);
-  background-color: white;
-  // line-height: 3.5rem;
-  height: fit-content;
+  line-height: 2.5rem;
   width: fit-content;
-  padding: 0px 7px;
+  min-height: 200px;
+  min-width: 180px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 20px 30px;
+  background: rgb(255,255,255);
+  background: radial-gradient(circle, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 70%);  height: fit-content;
+
+
+  span {
+    font-size: 22px;
+    font-family: $body-font;
+    margin: 0;
+    margin-top: 0px;
+    padding: 0;
+    font-weight: bold;
+    text-decoration: underline;
+  }
 }
 
 .one {
