--- a/app/assets/stylesheets/pages/_concerts_index.scss
+++ b/app/assets/stylesheets/pages/_concerts_index.scss
@@ -3,10 +3,16 @@
 .concerts-layout {
   padding: 50px;
   background-color: rgb(20, 20, 20);
+
+  .banner-one {
+    .text-center {
+      margin: 0;
+    }
+  }
 }
 
 .masonry-grid {
-  margin-top: 70px;
+  margin-top: 0px;
   width: 100%;
   height: 100vh;
   display: grid;
@@ -146,11 +152,16 @@
   }
 }
 .hover-disapear:hover {
+
+
   a {
-    color: black;
+    color: #17615de0;
+
   }
   span {
-    color: black;
+    color: #17615de0;
+
+
   }
 
 }
